# community_governance

./: .env.example  .gitattributes  .gitignore  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_SYSTEM_STATUS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  PROJECT_SUMMARY.md  README.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TEST_ACCOUNTS.md  alembic.ini  current_openapi.json  docker-compose.yml  docker-deploy.sh  pyproject.toml  requirements.txt  run.py  start_all.sh  start_frontend.sh  start_server.sh
alembic/: env.py
app/: __init__.py  main.py
app/api/: __init__.py  health.py
app/api/v1/: ai.py  (+13 more)
app/core/: __init__.py  auth_middleware.py  cache.py  config.py  config_validator.py  database.py  database_init.py  exceptions.py  logging.py  metrics.py  middleware.py  monitoring.py  monitoring_scheduler.py  notification_init.py  performance_middleware.py  permissions.py  redis.py  redis_client.py  response.py  retry.py  scheduler.py  security.py  utils.py
app/models/: __init__.py  community.py  event.py  notification.py  user.py
app/schemas/: __init__.py  ai.py  auth.py  event.py  file.py  notification.py  response.py
app/services/: __init__.py  ai_service.py  auth_service.py  background_tasks.py  event_notification_integration.py  event_service.py  location_service.py  log_service.py  notification_preference_service.py  notification_service.py  notification_template_service.py  notification_trigger_service.py  notification_worker.py  oss_service.py  sms_service.py  statistics_service.py
deployment/: docker-compose.prod.yml  nginx.conf
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
deployment/scripts/: deploy.sh
docs/: ai_service_guide.md  monitoring_system.md
frontend/: .env.development  .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
scripts/: add_role_column.py  create_test_users.py  generate_ssl.sh  init-db.sql  init_test_data.py  monitor_logs.sh  start-dev.sh  test_api.sh  test_monitoring_system.py  user_management.html  verify_test_users.py
tests/: conftest.py  test_ai_integration.py  test_ai_service.py  test_all_fixes.py  test_api.py  test_api_integration.py  test_auth_service.py  test_data_factory.py  test_end_to_end_workflows.py  test_event_service.py  test_frontend_api_compatibility.py  test_frontend_backend_integration.py  test_latest_fixes.py  test_monitoring.py  test_new_features.py  test_notification_service.py  test_notification_system.py  test_oss_service.py  test_performance_load.py  test_permissions.py  test_statistics_service.py  test_system_integration.py
(+255 files in other folders)
